---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: ????
  Info:
    - Add the tip occluder back
    - Import and implement a new batch of graphics
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025. 04. 21
  Info:
    - Import and implement another new batch of graphics
    - Pass the pipes under elevated rails
    - Allow placing the pipeless variant by rotating
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025. 04. 20
  Info:
    - Import and implement the new batch of graphics
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2025. 04. 20
  Info:
    - Fix pillar only forming one outgoing connection
    - Reach over the railings of elevated rails
    - Enhance render layer interactions with elevated rails
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 04. 20
  Info:
    - Setup the luarendering refresh template
    - Do the visual connecting and disconnecting
    - Add an occluder for the top of the tip
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 04. 20
  Info:
    - Adjust selection and colission boxes
    - mark the building as tall
    - Add the riser ontop and control it via scripting
    - Actually just swap the pipe connections
    - Riser begone
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 04. 20
  Info:
    - Setup the player facing prototypes
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 04. 19
  Info:
    - Initial commit