@@ -31,8 +31,10 @@ data:extend{
   sprite_with_shadow("pipe-pillar-elevated-horizontal-left", {shadow = false}),
   sprite_with_shadow("pipe-pillar-elevated-horizontal-right", {shadow = false}),
   sprite_with_shadow("pipe-pillar-elevated-horizontal-center"),
+  sprite_with_shadow("pipe-pillar-elevated-horizontal-single"),
   sprite_with_shadow("pipe-pillar-elevated-vertical-top"),
   sprite_with_shadow("pipe-pillar-elevated-vertical-bottom"),
   sprite_with_shadow("pipe-pillar-elevated-vertical-center"),
+  sprite_with_shadow("pipe-pillar-elevated-vertical-single"),
   sprite_with_shadow("pipe-pillar-occluder-tip", {shadow = false}),
 }
