@@ -4,6 +4,7 @@ Date: ????
   Info:
     - Add the tip occluder back
     - Import and implement a new batch of graphics
+    - Properly implement the horizontal/vertical single sprite
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.7
 Date: 2025. 04. 21
